Surface Link from Glitch

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- Texture Sources -->
         <img id="skyTexture" src="blue.jpg">
         <img id="sandTexture" src="sand.jpg">
-        <a-video id="surfaceTexture" src="surface.mp4" width="16" height="9" rotation="90 0 0"></a-video>
+        <a-video id="surfaceTexture" src="https://cdn.glitch.com/d7d5b69f-7eef-41e8-9e64-ccef4d7f5732%2Fsurface.mp4?v=1568983600966" width="16" height="9" rotation="90 0 0"></a-video>
         
       </a-assets>
       
