--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <a-gltf-model src="coral2/scene.gltf" position="-1 -24 -40" scale="35 35 35" rotation="0 -90 -20"></a-gltf-model>
       
       <!-- Oceanic Surface --> 
-      <a-video src="surface.mp4" width="96" height="54" position="0 15 27" rotation="270 0 0" opacity="1"></a-video>
-      <a-video src="surface.mp4" width="96" height="54" position="0 15 -27" rotation="90 0 0" opacity="1"></a-video>
+      <a-video src="https://cdn.glitch.com/d7d5b69f-7eef-41e8-9e64-ccef4d7f5732%2Fsurface.mp4?v=1568983600966" width="96" height="54" position="0 15 27" rotation="270 0 0" opacity="1"></a-video>
+      <a-video src="https://cdn.glitch.com/d7d5b69f-7eef-41e8-9e64-ccef4d7f5732%2Fsurface.mp4?v=1568983600966" width="96" height="54" position="0 15 -27" rotation="90 0 0" opacity="1"></a-video>
       
       <!-- Sea Floor -->
       <a-gltf-model src="seafloor/scene.gltf" position="0 -20 0" scale="10 10 10"></a-gltf-model>
